--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,14 +15,12 @@
             android:id="@+id/action_WelcomeFragment_to_LoginActivity"
             app:destination="@id/LoginActivity" />
     </fragment>
-    <fragment
+    <activity
         android:id="@+id/LoginActivity"
         android:name="com.example.mediassist.login.LoginActivity"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+
+    </activity>
 </navigation>
