--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,28 +1,27 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:background="@color/rectangle_11_color">
+<?xml version="1.0" encoding="utf-8"?>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="552dp"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+
+        android:elevation="0dp">
 
 
-
-<RelativeLayout
-    android:id="@+id/content_container"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
 
 
     <RelativeLayout
         android:id="@+id/page_signin_page_ek1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp">
 
         <View
             android:id="@+id/_bg__signin_page_ek2"
-            android:layout_width="400dp"
-            android:layout_height="600dp"
+            android:layout_width="549dp"
+            android:layout_height="727dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:background="@drawable/_bg__signin_page_shape" />
@@ -30,8 +29,8 @@ android:background="@color/rectangle_11_color">
 
         <View
             android:id="@+id/rectangle_12"
-            android:layout_width="400dp"
-            android:layout_height="600dp"
+            android:layout_width="549dp"
+            android:layout_height="727dp"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
             android:background="@drawable/rectangle_12_shape" />
@@ -39,11 +38,11 @@ android:background="@color/rectangle_11_color">
 
         <TextView
             android:id="@+id/sign_in_to_your_account"
-            android:layout_width="284dp"
-            android:layout_height="43dp"
+            android:layout_width="261dp"
+            android:layout_height="34dp"
             android:layout_gravity="center_horizontal|center"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginLeft="75dp"
+            android:layout_marginTop="40dp"
             android:fontFamily="Inter"
             android:gravity="center"
             android:text="@string/sign_in_to_your_account_string"
@@ -55,7 +54,7 @@ android:background="@color/rectangle_11_color">
             android:id="@+id/rectangle_7"
             android:layout_width="300dp"
             android:layout_height="41dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="165dp"
             android:background="@drawable/rectangle_7_shape" />
 
@@ -63,7 +62,7 @@ android:background="@color/rectangle_11_color">
             android:id="@+id/rectangle_8"
             android:layout_width="300dp"
             android:layout_height="41dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="280dp"
             android:background="@drawable/rectangle_8_shape" />
 
@@ -73,7 +72,7 @@ android:background="@color/rectangle_11_color">
             android:layout_width="56dp"
             android:layout_height="31dp"
             android:layout_gravity="center_horizontal|center"
-            android:layout_marginLeft="24dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="135dp"
             android:fontFamily="Inter"
             android:gravity="center"
@@ -81,30 +80,31 @@ android:background="@color/rectangle_11_color">
             android:textColor="@color/email__color"
             android:textSize="14sp"
             android:textStyle="bold" />
+
         <TextView
             android:layout_width="56dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="71dp"
+            android:layout_marginLeft="101dp"
             android:layout_marginTop="139dp"
             android:text="@string/mandatory"
             android:textColor="@color/colorAccent"
             android:textSize="14sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/email"
-            android:layout_width="250dp"
+            android:layout_width="260dp"
             android:layout_height="31dp"
             android:layout_gravity="fill_horizontal|left"
-            android:layout_marginLeft="34dp"
+            android:layout_marginLeft="70dp"
             android:layout_marginTop="175dp"
             android:background="@null"
             android:fontFamily="Inter"
             android:gravity="left"
             android:hint="email@domain.com"
-            android:textColorHint="@color/white"
             android:inputType="textEmailAddress"
             android:textColor="@color/white"
+            android:textColorHint="#303843"
             android:textSize="15sp"
             android:textStyle="bold"
 
@@ -116,7 +116,7 @@ android:background="@color/rectangle_11_color">
             android:layout_width="86dp"
             android:layout_height="31dp"
             android:layout_gravity="center_horizontal|center"
-            android:layout_marginLeft="24dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="250dp"
             android:fontFamily="Inter"
             android:gravity="center"
@@ -124,39 +124,40 @@ android:background="@color/rectangle_11_color">
             android:textColor="@color/email__color"
             android:textSize="14sp"
             android:textStyle="bold" />
+
         <TextView
             android:layout_width="96dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="99dp"
+            android:layout_marginLeft="129dp"
             android:layout_marginTop="254dp"
             android:text="@string/mandatory"
             android:textColor="@color/colorAccent"
             android:textSize="14sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="250dp"
+            android:layout_width="260dp"
             android:layout_height="31dp"
-            android:layout_marginLeft="34dp"
+            android:layout_marginLeft="70dp"
             android:layout_marginTop="290dp"
             android:background="@null"
             android:fontFamily="Inter"
             android:gravity="left"
             android:hint="Pwd@123"
-            android:textColorHint="@color/white"
             android:inputType="textPassword"
             android:textColor="@color/white"
+            android:textColorHint="#303843"
             android:textSize="15sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/sign_in"
-            android:layout_width="250dp"
+            android:layout_width="240dp"
             android:layout_height="51dp"
             android:layout_gravity="center_horizontal|center"
-            android:layout_marginStart="34dp"
-            android:layout_marginTop="390dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="425dp"
             android:backgroundTint="@color/rectangle_stroke"
             android:fontFamily="Inter"
             android:gravity="center"
@@ -167,9 +168,20 @@ android:background="@color/rectangle_11_color">
             android:textStyle="bold"
 
             />
+        <Button
+            android:id="@+id/Forget_pwd"
+            android:background="@android:color/transparent"
+            android:layout_width="240dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="500dp"
+            android:fontFamily="Inter"
+            android:text="Forget the Password?"
+            android:textColor="#408E9B"
+            android:textSize="14sp"
+             />
+
 
     </RelativeLayout>
-</RelativeLayout>
 
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
