--- a/app/src/main/res/layout/content_clinic.xml
+++ b/app/src/main/res/layout/content_clinic.xml
@@ -5,8 +5,13 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+    <androidx.appcompat.widget.ActionMenuView
+        android:id="@+id/clinic_action_bar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <fragment
-        android:id="@+id/nav_host_fragment_content_signup"
+        android:id="@+id/nav_host_fragment_content_clinic"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,5 +20,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_graph2" />
+        app:navGraph="@navigation/nav_clinic" />
 </androidx.constraintlayout.widget.ConstraintLayout>
