--- a/app/src/main/res/navigation/nav_welcome.xml
+++ b/app/src/main/res/navigation/nav_welcome.xml
@@ -2,24 +2,27 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph"
+    android:id="@+id/nav_clinic"
     app:startDestination="@id/FirstFragment">
 
     <fragment
         android:id="@+id/FirstFragment"
         android:name="com.example.mediassist.WelcomeFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:label="@string/welcome_fragment_label"
+        tools:layout="@layout/welcome">
 
         <action
             android:id="@+id/action_WelcomeFragment_to_LoginActivity"
             app:destination="@id/LoginActivity" />
+        <action
+            android:id="@+id/action_WelcomeFragment_to_ClinicActivity"
+            app:destination="@id/ClinicListActivity" />
     </fragment>
     <activity
         android:id="@+id/LoginActivity"
         android:name="com.example.mediassist.login.LoginActivity"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/activity_login">
 
 
     </activity>
