--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="black">#FF0D0D0D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color">#FF408E9B</color>
+    <color name="disabled_color">#FFA9CACF</color>
 </resources>
