--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,21 @@
         <item name="android:minWidth">250dp</item>
     </style>
 
+    <style name="disabled_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="strokeColor">@color/disabled_color</item>
+        <item name="cornerRadius">22dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:height">60dp</item>
+        <item name="backgroundTint">@color/disabled_color</item>
+        <item name="android:minWidth">250dp</item>
+    </style>
+
     <style name="appbar_title">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
     </style>
