--- a/app/src/main/res/layout/content_category.xml
+++ b/app/src/main/res/layout/content_category.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="none"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <fragment
-        android:id="@+id/nav_host_fragment_content_main"
+        android:id="@+id/nav_host_fragment_content_category"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -16,5 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_welcome" />
+        app:navGraph="@navigation/nav_category" />
 </androidx.constraintlayout.widget.ConstraintLayout>
