added category package

--- a/app/src/main/res/navigation/nav_clinic.xml
+++ b/app/src/main/res/navigation/nav_clinic.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ClinicListActivity"
+    android:id="@+id/nav_clinic"
     app:startDestination="@id/ClinicListFragment">
 
     <fragment
@@ -12,7 +12,7 @@
         tools:layout="@layout/clinic_list">
 
         <action
-            android:id="@+id/action_ClinicListFragment_to_Second3Fragment"
+            android:id="@+id/action_ClinicListFragment_to_AddClinicFragment"
             app:destination="@id/AddClinicFragment" />
     </fragment>
     <fragment
@@ -21,8 +21,6 @@
         android:label="@string/second_fragment_label"
         tools:layout="@layout/add_clinic">
 
-        <action
-            android:id="@+id/action_AddClinicFragment_to_ClinicListFragment"
-            app:destination="@id/ClinicListActivity" />
+
     </fragment>
 </navigation>
