--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,10 @@
     <color name="black">#FF0D0D0D</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary_color">#FF408E9B</color>
+    <color name="disabled_color">#FFA9CACF</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
