--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,15 +14,45 @@
         <item name="android:minWidth">250dp</item>
     </style>
 
-    <style name="disabled_button">
+    <style name="default_edit_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:layout_marginHorizontal">20dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="backgroundTint">@color/disabled_color</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:minWidth">350dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">@drawable/default_edit_text</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:inputType">textCapWords</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/hint_text_color</item>
+
+    </style>
+
+    <style name="default_label_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">50dp</item>
+        <item name="android:textColor">@color/label_text_color</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:drawableRight">@drawable/asterisk</item>item>
+    </style>
+
+    <style name="default_disabled_button">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="strokeColor">@color/disabled_color</item>
         <item name="cornerRadius">22dp</item>
         <item name="textAllCaps">false</item>
         <item name="android:height">60dp</item>
-        <item name="backgroundTint">@color/disabled_color</item>
-        <item name="android:minWidth">250dp</item>
+        <item name="backgroundTint">@color/disabled_primary_color</item>
+        <item name="android:minWidth">350dp</item>
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
     </style>
 
     <style name="appbar_title">
