added progress bar for clinic

--- a/app/src/main/res/drawable/asterisk.xml
+++ b/app/src/main/res/drawable/asterisk.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="40"
     android:viewportHeight="50">
   <path
-      android:fillColor="@color/error_text_color"
+      android:fillColor="@color/asterisk_error_color"
       android:pathData="M18.562,14.634 L14,12 18.562,9.366a1,1 0,0 0,-1 -1.732L13,10.268V5a1,1 0,0 0,-2 0v5.268l-4.562,-2.634a1,1 0,0 0,-1 1.732L10,12 5.438,14.634a1,1 0,0 0,1 1.732L11,13.732V19a1,1 0,0 0,2 0V13.732l4.562,2.634a1,1 0,0 0,1 -1.732Z"/>
 </vector>
