--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:alpha="0.3">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="30dp"
         android:orientation="vertical"
         tools:context=".clinic.AddClinicFragment">
 
@@ -18,13 +17,18 @@
 
         <TextView
             android:id="@+id/text_view_boat1"
-            style="@style/default_label_text"
+            style="@style/mandatory_label_text"
             android:text="Name" />
 
         <EditText
             android:id="@+id/clinic_name_text"
             style="@style/default_edit_text"
             android:hint="Name" />
+
+        <TextView
+            android:id="@+id/clinic_name_error_text"
+            style="@style/default_error_text"
+            android:text="Clinic name is required" />
 
         <TextView
             android:id="@+id/clinic_name_label"
@@ -36,9 +40,10 @@
             style="@style/default_edit_text"
             android:hint="Details" />
 
+
         <TextView
             android:id="@+id/clinic_phone_number_label"
-            style="@style/default_label_text"
+            style="@style/mandatory_label_text"
             android:text="Phone Number" />
 
         <EditText
@@ -48,8 +53,13 @@
             android:inputType="phone" />
 
         <TextView
+            android:id="@+id/clinic_phone_number_error_text"
+            style="@style/default_error_text"
+            android:text="Phone Number is required" />
+
+        <TextView
             android:id="@+id/clinic_address_label"
-            style="@style/default_label_text"
+            style="@style/mandatory_label_text"
             android:text="Address" />
 
         <EditText
@@ -57,25 +67,34 @@
             style="@style/default_edit_text"
             android:hint="Address" />
 
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/clinic_address_error_text"
+            style="@style/default_error_text"
+            android:text="Address is required" />
+
+
         <TextView
             android:id="@+id/clinic_zipcode_label"
-            android:text="ZipCode"
+            style="@style/mandatory_label_text"
+            android:text="ZipCode" />
 
-            style="@style/default_label_text"
-             />
 
-        </RelativeLayout>
         <EditText
             android:id="@+id/clinic_zipcode_text"
-            android:hint="ZipCode"
             style="@style/default_edit_text"
-             />
+            android:hint="ZipCode" />
+
+        <TextView
+            android:id="@+id/clinic_zipcode_error_text"
+            style="@style/default_error_text"
+            android:text="Zipcode is required" />
 
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/clinic_progress_bar"
+        style="@style/default_progress_bar" />
 
     <Button
         android:id="@+id/clinic_save_button"
