--- a/app/src/main/res/layout/clinic_list.xml
+++ b/app/src/main/res/layout/clinic_list.xml
@@ -8,30 +8,32 @@
     tools:context=".clinic.ClinicListFragment">
 
 
-<androidx.appcompat.widget.LinearLayoutCompat
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <pl.droidsonroids.gif.GifImageView
-            android:id="@+id/gifClinic"
+            android:id="@+id/clinic_empty_gif"
             android:layout_width="307dp"
             android:layout_height="307dp"
-            android:src="@drawable/empty_clinic"
             android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"/>
+            android:layout_marginRight="50dp"
+            android:visibility="gone"
+            android:src="@drawable/empty_clinic" />
 
         <TextView
+            android:id="@+id/clinic_not_found_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:visibility="gone"
             android:text="@string/empty_clinic"
-            android:textColor="@color/white"
-            />
+            android:textColor="@color/white" />
 
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
