--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,6 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minHeight">50dp</item>
         <item name="android:layout_marginHorizontal">20dp</item>
-        <item name="android:layout_marginBottom">20dp</item>
         <item name="backgroundTint">@color/disabled_color</item>
         <item name="android:paddingLeft">20dp</item>
         <item name="android:minWidth">350dp</item>
@@ -30,6 +29,24 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/hint_text_color</item>
+    </style>
+
+    <style name="default_error_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">10dp</item>
+        <item name="android:layout_marginBottom">20dp</item>
+        <item name="backgroundTint">@color/secondary_error_color</item>
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:minWidth">350dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:background">@drawable/default_edit_text</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:drawableLeft">@drawable/warning_sign</item>item>
+        <item name="android:visibility">gone</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/error_text_color</item>
+
 
     </style>
 
@@ -39,6 +56,10 @@
         <item name="android:layout_marginLeft">50dp</item>
         <item name="android:textColor">@color/label_text_color</item>
         <item name="android:fontWeight">600</item>
+        <item name="android:layout_marginTop">20dp</item>
+    </style>
+
+    <style name="mandatory_label_text" parent="@style/default_label_text">
         <item name="android:drawableRight">@drawable/asterisk</item>item>
     </style>
 
@@ -53,6 +74,14 @@
         <item name="android:minWidth">350dp</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
+    <style name="default_progress_bar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:visibility">gone</item>
     </style>
 
     <style name="appbar_title">
