--- a/app/src/main/res/layout/add_clinic_admin.xml
+++ b/app/src/main/res/layout/add_clinic_admin.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:textAlignment="center">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,16 +26,6 @@
             android:hint="Name" />
 
         <TextView
-            android:id="@+id/clinic_admin_name_label"
-            style="@style/default_label_text"
-            android:text="Details" />
-
-        <EditText
-            android:id="@+id/clinic_admin_details_text"
-            style="@style/default_edit_text"
-            android:hint="Details" />
-
-        <TextView
             android:id="@+id/clinic_admin_phone_number_label"
             style="@style/default_label_text"
             android:text="Phone Number" />
@@ -47,34 +37,41 @@
             android:inputType="phone" />
 
         <TextView
-            android:id="@+id/clinic_admin_address_label"
+            android:id="@+id/clinic_admin_email_label"
             style="@style/default_label_text"
-            android:text="Address" />
+            android:text="Email" />
 
         <EditText
-            android:id="@+id/clinic_admin_address_text"
+            android:id="@+id/clinic_admin_email_text"
             style="@style/default_edit_text"
-            android:hint="Address" />
+            android:hint="Email" />
 
-        <RelativeLayout
+        <TextView
+            android:id="@+id/clinic_admin_assign_clinic_label"
+            style="@style/default_label_text"
+            android:text="Assign Clinic" />
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/clinic_admin_zipcode_label"
-                android:text="ZipCode"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft = "50dp"
+            android:textColor = "@color/label_text_color"
+            android:fontWeight="600"
+            android:layout_marginTop="20dp"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
 
-                style="@style/default_label_text"
-                />
+            <AutoCompleteTextView
+                android:id="@+id/clinic_admin_dropdown"
+                android:layout_width="274dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Select one" />
 
-        </RelativeLayout>
-        <EditText
-            android:id="@+id/clinic_admin_zipcode_text"
-            android:hint="ZipCode"
-            style="@style/default_edit_text"
-            />
 
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
+
 
     <Button
         android:id="@+id/clinic_admin_save_button"
