--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -16,7 +16,7 @@
         <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
 
         <TextView
-            android:id="@+id/text_view_boat1"
+            android:id="@+id/clinic_name_label"
             style="@style/mandatory_label_text"
             android:text="Name" />
 
@@ -31,7 +31,7 @@
             android:text="Clinic name is required" />
 
         <TextView
-            android:id="@+id/clinic_name_label"
+            android:id="@+id/clinic_details_label"
             style="@style/default_label_text"
             android:text="Details" />
 
@@ -99,5 +99,39 @@
     <Button
         android:id="@+id/clinic_save_button"
         style="@style/default_disabled_button"
-        android:text="Save" />
+        android:text="Save"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/clinic_save_button2"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="80dp"
+            android:maxWidth="35dp"
+            android:text="Save"
+            android:textAlignment="center"
+            app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/clinic_save_button3"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="80dp"
+            android:maxWidth="35dp"
+            android:text="Delete"
+            android:textAlignment="center"
+            android:backgroundTint="@color/secondary_error_color"
+            android:textColor="@color/error_text_color"
+            app:cornerRadius="100dp" />
+
+    </LinearLayout>
 </RelativeLayout>
