--- a/app/src/main/res/layout/clinic_list.xml
+++ b/app/src/main/res/layout/clinic_list.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textAlignment="center"
             android:visibility="gone"
             android:text="@string/empty_clinic"
             android:textColor="@color/white" />
