--- a/app/src/main/res/layout/fragment_otp_for_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_otp_for_forgot_password.xml
@@ -74,7 +74,7 @@
                 android:layout_marginTop="500dp"
                 android:text="Continue"
                 android:textColor="@color/white"
-                style="@style/disabled_button" />
+                style="@style/default_disabled_button" />
         </RelativeLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
