--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -153,6 +153,6 @@
             android:layout_marginTop="516dp"
             android:text="Save"
             android:textColor="@color/white"
-            style="@style/disabled_button" />
+            style="@style/default_disabled_button" />
            </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
