--- a/app/src/main/res/layout/fragment_successful_reset_password.xml
+++ b/app/src/main/res/layout/fragment_successful_reset_password.xml
@@ -86,7 +86,7 @@
                 android:layout_marginTop="500dp"
                 android:text="Home Page"
                 android:textColor="@color/white"
-                style="@style/disabled_button" />
+                style="@style/default_disabled_button" />
         </RelativeLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
