--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
         android:layout_width="552dp"
         android:layout_height="match_parent"
         android:background="@color/black"
-        android:elevation="0dp">
+        android:elevation="0dp" >
 
 
 
@@ -15,24 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp">
-
-        <View
-            android:id="@+id/_bg__signin_page_ek2"
-            android:layout_width="549dp"
-            android:layout_height="727dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/_bg__signin_page_shape" />
+        android:layout_marginTop="0dp"
+        >
 
 
-        <View
-            android:id="@+id/rectangle_12"
-            android:layout_width="549dp"
-            android:layout_height="727dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:background="@drawable/rectangle_12_shape" />
+
+
 
 
         <TextView
@@ -150,21 +138,25 @@
             android:textStyle="bold" />
         <Button
             android:id="@+id/sign_in"
-            android:layout_width="240dp"
+            android:layout_width="250dp"
             android:layout_height="51dp"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="425dp"
+            android:layout_marginTop="450dp"
             android:onClick="onClickSignInButton"
             android:text="@string/sign_in_string"
             android:textColor="@color/white"
-            style="@style/default_disabled_button" />
+            android:backgroundTint="#A9CACF"
+            android:layout_alignParentBottom="false"
+            android:layout_centerHorizontal="false"
+            style="@style/default_disabled_button"
+            />
 
         <Button
             android:id="@+id/Forget_pwd"
             android:background="@android:color/transparent"
             android:layout_width="240dp"
             android:layout_height="60dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="90dp"
             android:layout_marginTop="500dp"
             android:fontFamily="Inter"
             android:textAllCaps="false"
