--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".clinicadmin.ClinicAdminActivity">
+    tools:context=".clinic.ClinicActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:backgroundTint="@color/black"
         android:theme="@style/Theme.MediAssist.AppBarOverlay">
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -28,29 +27,29 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
-                android:id="@+id/textTitleClinicAdmin"
+                android:id="@+id/textTitle"
                 style="@style/appbar_title"
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@+id/btnBack"
                 android:paddingTop="22dp"
-                android:text="Clinic Admins" />
+                android:text="Clinics" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnAddForClinicAdmin"
+                android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:backgroundTint="@color/black"
                 android:paddingTop="12dp"
-                android:visibility="gone"
                 app:icon="@drawable/ic_baseline_add_circle_outline_24"
                 app:iconTint="@color/primary_color"
                 app:layout_constraintBottom_toBottomOf="parent"
-
                 app:layout_constraintStart_toStartOf="parent" />
         </RelativeLayout>
-
     </com.google.android.material.appbar.AppBarLayout>
-    <include layout="@layout/content_clinic_admin" />
+
+    <include layout="@layout/content_doctor" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
