--- a/app/src/main/res/layout/add_doctor.xml
+++ b/app/src/main/res/layout/add_doctor.xml
@@ -3,105 +3,122 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<!--    android:alpha="0.3"-->
-<!--    >-->
+    android:layout_height="match_parent"
+    android:alpha="0.3">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
-        tools:context=".clinic.AddClinicFragment">
+        tools:context=".doctor.AddDoctorFragment">
 
         <!--    app:layout_constraintBottom_toTopOf="@id/button_second"-->
 
         <TextView
-            android:id="@+id/clinic_name_label"
+            android:id="@+id/doctor_name_label"
             style="@style/mandatory_label_text"
             android:text="Name" />
 
         <EditText
-            android:id="@+id/clinic_name_text"
+            android:id="@+id/doctor_name_text"
             style="@style/default_edit_text"
             android:hint="Name" />
 
         <TextView
-            android:id="@+id/clinic_name_error_text"
+            android:id="@+id/doctor_name_error_text"
             style="@style/default_error_text"
-            android:text="Clinic name is required" />
-
-        <TextView
-            android:id="@+id/clinic_details_label"
-            style="@style/default_label_text"
-            android:text="Details" />
-
-        <EditText
-            android:id="@+id/clinic_details_text"
-            style="@style/default_edit_text"
-            android:hint="Details" />
+            android:text="doctor name is required" />
 
 
         <TextView
-            android:id="@+id/clinic_phone_number_label"
+            android:id="@+id/doctor_phone_number_label"
             style="@style/mandatory_label_text"
             android:text="Phone Number" />
 
         <EditText
-            android:id="@+id/clinic_phone_number_text"
+            android:id="@+id/doctor_phone_number_text"
             style="@style/default_edit_text"
             android:hint="Phone Number"
             android:inputType="phone" />
 
         <TextView
-            android:id="@+id/clinic_phone_number_error_text"
+            android:id="@+id/doctor_phone_number_error_text"
             style="@style/default_error_text"
             android:text="Phone Number is required" />
 
         <TextView
-            android:id="@+id/clinic_address_label"
+            android:id="@+id/doctor_address_label"
             style="@style/mandatory_label_text"
             android:text="Address" />
 
         <EditText
-            android:id="@+id/clinic_address_text"
+            android:id="@+id/doctor_address_text"
             style="@style/default_edit_text"
             android:hint="Address" />
 
         <TextView
-            android:id="@+id/clinic_address_error_text"
+            android:id="@+id/doctor_address_error_text"
             style="@style/default_error_text"
             android:text="Address is required" />
 
 
         <TextView
-            android:id="@+id/clinic_zipcode_label"
+
             style="@style/mandatory_label_text"
-            android:text="ZipCode" />
+            android:layout_marginLeft="45dp"
+            android:text="Assign Specialization" />
 
+        <Spinner
 
-        <EditText
-            android:id="@+id/clinic_zipcode_text"
-            style="@style/default_edit_text"
-            android:hint="ZipCode" />
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/default_spinner_dropdown"
+            android:overlapAnchor="false"
+            android:theme="@style/spinner"
+            app:boxBackgroundColor="@color/disabled_color"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:popupTheme="@style/spinner_menu">
+
+        </Spinner>
 
         <TextView
-            android:id="@+id/clinic_zipcode_error_text"
-            style="@style/default_error_text"
-            android:text="Zipcode is required" />
+            android:id="@+id/clinic_admin_clinic_label"
+            style="@style/mandatory_label_text"
+            android:layout_marginLeft="45dp"
+            android:text="Assign Clinic" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:background="@drawable/default_spinner_dropdown"
+            android:overlapAnchor="false"
+            android:theme="@style/spinner"
+            app:boxBackgroundColor="@color/disabled_color"
+            app:boxCornerRadiusBottomStart="20dp"
+            app:boxCornerRadiusTopEnd="20dp"
+            app:boxCornerRadiusTopStart="20dp"
+            app:popupTheme="@style/spinner_menu">
+
+        </Spinner>
 
 
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/clinic_progress_bar"
+        android:id="@+id/doctor_progress_bar"
         style="@style/default_progress_bar" />
 
     <Button
-        android:id="@+id/clinic_save_button"
+        android:id="@+id/doctor_save_button"
         style="@style/default_disabled_button"
         android:text="Save"
-    />
+        android:visibility="gone" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -110,11 +127,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:visibility="gone"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/clinic_save_button2"
+            android:id="@+id/doctor_save_button2"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
@@ -124,14 +140,14 @@
             app:cornerRadius="100dp" />
 
         <Button
-            android:id="@+id/clinic_save_button3"
+            android:id="@+id/doctor_save_button3"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
+            android:backgroundTint="@color/secondary_error_color"
             android:maxWidth="35dp"
             android:text="Delete"
             android:textAlignment="center"
-            android:backgroundTint="@color/secondary_error_color"
             android:textColor="@color/error_text_color"
             app:cornerRadius="100dp" />
 
