--- a/app/src/main/res/layout/content_doctor.xml
+++ b/app/src/main/res/layout/content_doctor.xml
@@ -5,8 +5,10 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+
     <fragment
-        android:id="@+id/nav_host_fragment_content_category"
+        android:id="@+id/nav_host_fragment_content_doctor"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -15,5 +17,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/nav_category" />
+        app:navGraph="@navigation/nav_doctor" />
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
