Add clinic admin and Add doctor backend code changes. Clinic, ClinicAdmin, Doctor and login error message visibility code changes.

--- a/app/src/main/res/layout/add_clinic.xml
+++ b/app/src/main/res/layout/add_clinic.xml
@@ -29,6 +29,7 @@
         <TextView
             android:id="@+id/clinic_name_error_text"
             style="@style/default_error_text"
+            android:visibility="gone"
             android:text="Clinic name is required" />
 
         <TextView
@@ -56,6 +57,7 @@
         <TextView
             android:id="@+id/clinic_phone_number_error_text"
             style="@style/default_error_text"
+            android:visibility="gone"
             android:text="Phone Number is required" />
 
         <TextView
@@ -71,6 +73,7 @@
         <TextView
             android:id="@+id/clinic_address_error_text"
             style="@style/default_error_text"
+            android:visibility="gone"
             android:text="Address is required" />
 
 
@@ -88,6 +91,7 @@
         <TextView
             android:id="@+id/clinic_zipcode_error_text"
             style="@style/default_error_text"
+            android:visibility="gone"
             android:text="Zipcode is required" />
 
 
