--- a/app/src/main/res/layout/add_doctor.xml
+++ b/app/src/main/res/layout/add_doctor.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:alpha="0.3">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +29,8 @@
         <TextView
             android:id="@+id/doctor_name_error_text"
             style="@style/default_error_text"
-            android:text="doctor name is required" />
+            android:text="doctor name is required"
+            android:visibility="gone" />
 
 
         <TextView
@@ -45,7 +47,8 @@
         <TextView
             android:id="@+id/doctor_phone_number_error_text"
             style="@style/default_error_text"
-            android:text="Phone Number is required" />
+            android:text="Phone Number is required"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/doctor_address_label"
@@ -60,7 +63,8 @@
         <TextView
             android:id="@+id/doctor_address_error_text"
             style="@style/default_error_text"
-            android:text="Address is required" />
+            android:text="Address is required"
+            android:visibility="gone" />
 
 
         <TextView
@@ -70,13 +74,12 @@
             android:text="Assign Specialization" />
 
         <Spinner
-
+            android:id="@+id/Specialization_spinner"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/default_spinner_dropdown"
             android:overlapAnchor="false"
-            android:theme="@style/spinner"
             app:boxBackgroundColor="@color/disabled_color"
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
@@ -92,13 +95,12 @@
             android:text="Assign Clinic" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/Clinic_spinner"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/default_spinner_dropdown"
             android:overlapAnchor="false"
-            android:theme="@style/spinner"
             app:boxBackgroundColor="@color/disabled_color"
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
@@ -107,8 +109,8 @@
 
         </Spinner>
 
-
     </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/doctor_progress_bar"
@@ -117,8 +119,7 @@
     <Button
         android:id="@+id/doctor_save_button"
         style="@style/default_disabled_button"
-        android:text="Save"
-        android:visibility="gone" />
+        android:text="Save" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -127,20 +128,21 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <Button
-            android:id="@+id/doctor_save_button2"
+            android:id="@+id/doctor_edit_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
             android:maxWidth="35dp"
-            android:text="Save"
+            android:text="Edit"
             android:textAlignment="center"
             app:cornerRadius="100dp" />
 
         <Button
-            android:id="@+id/doctor_save_button3"
+            android:id="@+id/doctor_delete_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
