--- a/app/src/main/res/layout/add_clinic_admin.xml
+++ b/app/src/main/res/layout/add_clinic_admin.xml
@@ -24,6 +24,13 @@
             style="@style/default_edit_text"
             android:hint="Name" />
 
+
+        <TextView
+            android:id="@+id/clinic_admin_name_error_text"
+            style="@style/default_error_text"
+            android:text="Clinic Admin name is required"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/clinic_admin_phone_number_label"
             style="@style/mandatory_label_text"
@@ -34,6 +41,12 @@
             style="@style/default_edit_text"
             android:hint="Phone Number"
             android:inputType="phone" />
+
+        <TextView
+            android:id="@+id/clinic_admin_phone_number_error_text"
+            style="@style/default_error_text"
+            android:text="Clinic Admin Phone Number is required"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/clinic_admin_email_label"
@@ -47,22 +60,29 @@
             android:inputType="textEmailAddress" />
 
         <TextView
+            android:id="@+id/clinic_admin_email_error_text"
+            style="@style/default_error_text"
+            android:text="Clinic Admin Email is required"
+            android:visibility="gone" />
+
+        <TextView
             android:id="@+id/clinic_admin_clinic_label"
             style="@style/mandatory_label_text"
             android:layout_marginLeft="45dp"
             android:text="Assign Clinic" />
+
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="350dp"
-            android:layout_gravity="center"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:background="@drawable/default_spinner_dropdown"
+            android:overlapAnchor="false"
             app:boxBackgroundColor="@color/disabled_color"
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:popupTheme="@style/spinner_menu"
-            android:overlapAnchor="false"
 
             >
 
@@ -71,9 +91,46 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/doctor_progress_bar"
+        style="@style/default_progress_bar" />
 
     <Button
         android:id="@+id/clinic_admin_save_button"
         style="@style/default_disabled_button"
         android:text="Save" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <Button
+            android:id="@+id/clinic_admin_edit_button"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="80dp"
+            android:maxWidth="35dp"
+            android:text="Save"
+            android:textAlignment="center"
+            app:cornerRadius="100dp" />
+
+        <Button
+            android:id="@+id/clinic_admin_delete_button"
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="80dp"
+            android:backgroundTint="@color/secondary_error_color"
+            android:maxWidth="35dp"
+            android:text="Delete"
+            android:textAlignment="center"
+            android:textColor="@color/error_text_color"
+            app:cornerRadius="100dp" />
+
+    </LinearLayout>
 </RelativeLayout>
