--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,7 +31,7 @@
     <color name="asterisk_error_color">#FFE50000</color>
     <color name="secondary_error_color">#FF250E13</color>
     <color name="search_box_color">#FF222121</color>
-
+    <color name="success">#3FB664</color>
 
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
