--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,16 +12,18 @@
         <item name="android:height">60dp</item>
         <item name="backgroundTint">@color/black</item>
         <item name="android:minWidth">250dp</item>
+        <item name="android:clickable"> true</item>
+        <item name="android:enabled">true</item>
     </style>
 
     <style name="default_edit_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">50dp</item>
-        <item name="android:layout_marginHorizontal">20dp</item>
+        <item name="android:minHeight">@dimen/_35sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_15sdp</item>
         <item name="backgroundTint">@color/disabled_color</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:minWidth">350dp</item>
+        <item name="android:paddingLeft">@dimen/_10sdp</item>
+        <item name="android:minWidth">@dimen/_260sdp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:background">@drawable/default_edit_text</item>
         <item name="android:fontWeight">600</item>
@@ -34,17 +36,17 @@
     <style name="default_error_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">10dp</item>
-        <item name="android:layout_marginBottom">20dp</item>
+        <item name="android:minHeight">@dimen/_2sdp</item>
+        <item name="android:layout_marginBottom">@dimen/_10sdp</item>
         <item name="backgroundTint">@color/secondary_error_color</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:minWidth">350dp</item>
+        <item name="android:paddingLeft">@dimen/_10sdp</item>
+        <item name="android:minWidth">@dimen/_260sdp</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:background">@drawable/default_edit_text</item>
         <item name="android:fontWeight">600</item>
         <item name="android:drawableLeft">@drawable/warning_sign</item>item>
-
-        <item name="android:textSize">12sp</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:textSize">@dimen/_9ssp</item>
         <item name="android:textColor">@color/error_text_color</item>
 
 
@@ -53,10 +55,10 @@
     <style name="default_label_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginLeft">50dp</item>
+        <item name="android:layout_marginLeft">@dimen/_35sdp</item>
         <item name="android:textColor">@color/label_text_color</item>
         <item name="android:fontWeight">600</item>
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
     </style>
 
     <style name="mandatory_label_text" parent="@style/default_label_text">
@@ -71,9 +73,11 @@
         <item name="textAllCaps">false</item>
         <item name="android:height">60dp</item>
         <item name="backgroundTint">@color/disabled_primary_color</item>
-        <item name="android:minWidth">350dp</item>
+        <item name="android:minWidth">@dimen/_260sdp</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:clickable">false</item>
+        <item name="android:enabled">false</item>
     </style>
 
     <style name="default_progress_bar">
@@ -87,7 +91,7 @@
     <style name="dashboard_card">
         <item name="android:layout_width">140dp</item>
         <item name="android:layout_height">100dp</item>
-        <item name="android:layout_margin">20dp</item>
+        <item name="android:layout_margin">@dimen/_10sdp</item>
         <item name="cardBackgroundColor">@color/disabled_primary_color</item>
         <item name="cardElevation">100dp</item>
     </style>
@@ -95,8 +99,8 @@
     <style name="doctor_specialist_card">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">150dp</item>
-        <item name="android:layout_margin">20dp</item>
-        <item name="cardCornerRadius">20dp</item>
+        <item name="android:layout_margin">@dimen/_10sdp</item>
+        <item name="cardCornerRadius">@dimen/_10sdp</item>
         <item name="cardBackgroundColor">@color/disabled_primary_color</item>
         <item name="cardElevation">100dp</item>
     </style>
@@ -118,7 +122,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center|center_vertical</item>
-        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_marginTop">@dimen/_10sdp</item>
         <item name="android:textStyle">bold</item>
 
         <item name="android:textColor">@color/white</item>
@@ -141,7 +145,6 @@
         <item name="android:padding">8dp</item>
         <item name="android:colorBackground">@color/disabled_color</item>
         <item name="android:radius">10dp</item>
-        <item name="minWidth">370dp</item>
         <item name="android:textColor">@color/white</item>
     </style>
     <style name="spinner" parent="Base.Widget.AppCompat.Spinner">
