--- a/app/src/main/res/layout/add_category.xml
+++ b/app/src/main/res/layout/add_category.xml
@@ -29,6 +29,7 @@
         <TextView
             android:id="@+id/category_name_error_text"
             style="@style/default_error_text"
+            android:visibility="gone"
             android:text="Category name is required" />
 
         <TextView
@@ -43,41 +44,23 @@
 
 
         <TextView
-            android:id="@+id/category_phone_number_label"
-            style="@style/mandatory_label_text"
-            android:text="Icon" />
-
-        <EditText
-            android:id="@+id/category_phone_number_text"
-            style="@style/default_edit_text"
-            android:hint="Phone Number"
-            android:inputType="phone" />
-
-
-
-
-
-
-        <TextView
-            android:id="@+id/clinic_admin_clinic_label"
+            android:id="@+id/category_clinic_label"
             style="@style/mandatory_label_text"
             android:layout_marginLeft="45dp"
             android:text="Assign Clinic" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinner_category"
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="@drawable/default_spinner_dropdown"
             android:overlapAnchor="false"
-            android:theme="@style/spinner"
             app:boxBackgroundColor="@color/disabled_color"
             app:boxCornerRadiusBottomStart="20dp"
             app:boxCornerRadiusTopEnd="20dp"
             app:boxCornerRadiusTopStart="20dp"
             app:popupTheme="@style/spinner_menu">
-
         </Spinner>
 
 
@@ -104,7 +87,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/category_save_button2"
+            android:id="@+id/category_edit_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
@@ -114,7 +97,7 @@
             app:cornerRadius="100dp" />
 
         <Button
-            android:id="@+id/category_save_button3"
+            android:id="@+id/category_delete_button"
             android:layout_width="100dp"
             android:layout_height="60dp"
             android:layout_marginHorizontal="80dp"
