--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -17,7 +17,7 @@
 
 
         <TextView
-            android:id="@+id/clinic_name"
+            android:id="@+id/textview1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
@@ -26,7 +26,7 @@
             android:textColor="@color/primary_color" />
 
         <TextView
-            android:id="@+id/clinic_phone_number"
+            android:id="@+id/textview2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -34,7 +34,7 @@
             android:textColor="@color/white" />
 
         <TextView
-            android:id="@+id/clinic_address"
+            android:id="@+id/textview3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
