--- a/app/src/main/res/layout/doctor_list.xml
+++ b/app/src/main/res/layout/doctor_list.xml
@@ -34,7 +34,7 @@
             android:textColor="@color/white" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/idRVCourse"
+            android:id="@+id/idRVCourseDoctor"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </androidx.appcompat.widget.LinearLayoutCompat>
