--- a/app/src/main/res/layout/clinic_admin_list.xml
+++ b/app/src/main/res/layout/clinic_admin_list.xml
@@ -19,6 +19,7 @@
         android:src="@drawable/empty_super_admin"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
+        android:visibility="gone"
         tools:ignore="MissingConstraints" />
 
         <TextView
@@ -28,12 +29,16 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="50dp"
-
+            android:visibility="gone"
             android:text="No clinic admins found! Try to add by clicking on plus button at the top"
             android:textAlignment="center"
             android:textColor="@color/white"
             tools:ignore="MissingConstraints" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/idRVCourseClinicAdmin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
