--- a/app/src/main/res/layout/add_clinic_admin.xml
+++ b/app/src/main/res/layout/add_clinic_admin.xml
@@ -108,7 +108,7 @@
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:visibility="gone">
+        >
 
         <Button
             android:id="@+id/clinic_admin_edit_button"
@@ -117,6 +117,7 @@
             android:layout_marginHorizontal="80dp"
             android:maxWidth="35dp"
             android:text="Save"
+            android:visibility="gone"
             android:textAlignment="center"
             app:cornerRadius="100dp" />
 
@@ -128,6 +129,7 @@
             android:backgroundTint="@color/secondary_error_color"
             android:maxWidth="35dp"
             android:text="Delete"
+            android:visibility="gone"
             android:textAlignment="center"
             android:textColor="@color/error_text_color"
             app:cornerRadius="100dp" />
